# TaskScheduler

./: .gitignore  README.md  SCHEDULER ARCH.md  pyproject.toml
data/: tasks_0.csv  tasks_1.csv  tasks_2.csv  tasks_3.csv  tasks_4.csv
scheduler/: classes.py  optimizer.py  util.py
scripts/: create_schedule.py  random_tasks.py
tests/: test_scheduler.py
