[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.1.0"
description = "A scheduling system that optimizes task execution using mixed integer linear programming."
authors = [{ name = "Alexander Obuschenko", email = "alexander.obuschenko@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cvxpy",
    "pyscipopt"
]

[tool.setuptools]
packages = ["scheduler"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
run_scheduler = "scheduler.optimizer:main"

[tool.pytest.ini_options]
pythonpath = ["."]
